--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "flashtext (>=2.7,<3.0)",
     "passlib[bcrypt] (>=1.7.4,<2.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
+    "aiohttp (>=3.13.1,<4.0.0)",
+    "python-docx (>=1.2.0,<2.0.0)",
 ]
 
 
