--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "python-multipart (>=0.0.20,<0.0.21)",
     "aiohttp (>=3.13.1,<4.0.0)",
     "python-docx (>=1.2.0,<2.0.0)",
+    "python-dateutil (>=2.9.0.post0,<3.0.0)",
 ]
 
 
